<resources>
    <string name="app_name">BrainFatigueApp</string>
    <string name="activity_home_take_the_survey">Take The Survey</string>
    <string name="activity_home_view_my_dashboard">View My Dashboard</string>
    <string name="activity_home_welcome">Hello, what would you like to do today?</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_arrow">&#43;</string>
    <string name="activity_settings_button_heading">----- Notifications -----</string>
    <string name="activity_settings_frequency_slider_label">Frequency</string>
    <string name="activity_settings_frequency_slider_text">How often we\'ll remind you to take your fatigue survey
    </string>
    <string name="activity_settings_available_slider_label">Awake Time</string>
    <string name="activity_settings_available_slider_text">We\'ll only send you reminders between these times in the
        day
    </string>
    <string name="activity_settings_unavailable_slider_label">Do Not Disturb</string>
    <string name="activity_settings_unavailable_slider_text">We won\'t notify you between these times</string>
    <string name="activity_settings_summary_slider_label">Summary</string>
    <string name="activity_settings_summary_slider_text">This is when we\'ll let you know that your daily summary is
        ready
    </string>
    <string name="activity_settings_button_divider">--------- Other ---------</string>
    <string name="activity_settings_button_dark_mode">Dark Mode</string>
    <string name="activity_settings_button_faq">FAQs</string>
    <string name="activity_settings_button_faq_1">Q: How can I change the notifications that I am sent?</string>
    <string name="activity_settings_button_faq_2">
        A: You can adjust the timing and frequency of our notifications in the settings page. You can reach the
        settings page by tapping the cog in the top-right of the dashboard.
    </string>
    <string name="activity_settings_button_faq_3">Q: Where can I see my responses to surveys?</string>
    <string name="activity_settings_button_faq_4">
        A: You can view your responses in the dashboard. There is a tab for your daily summary and a tab for your
        all-time responses. Scroll down to see your full list of responses! Press the box to view the full data
        and press off the popup to close it.
    </string>
    <string name="activity_settings_button_faq_5">Q: Why is my daily summary empty?</string>
    <string name="activity_settings_button_faq_6">
        A: This might be because you didn\'t answer any surveys yesterday. Try checking again tomorrow. </string>
    <string name="activity_settings_button_faq_7">Q: Is there more than one graph on my dashboard?</string>
    <string name="activity_settings_button_faq_8">
        A: Yes! Scroll sideways on the Energy Level graph to see graphs for your Reaction Time and Fitbit data.
    </string>
    <string name="activity_settings_button_about">About info</string>
    <string name="activity_settings_button_logout">LOG OUT</string>
    <string name="activity_dashboard_title">My dashboard</string>
    <string name="activity_dashboard_graph_1_title">Energy Level</string>
    <string name="activity_dashboard_graph_2_title">Reaction Time (ms)</string>
    <string name="activity_dashboard_graph_3_title">Time in Each Heart Rate Zone Today (m)</string>
    <string name="activity_dashboard_graph_4_title">Time Doing Exercise per Day (m)</string>
    <string name="activity_dashboard_left_fragment_default_message">Check back here later to see your daily summary!</string>
    <string name="activity_dashboard_left_fragment_divider_message">---- Recent Responses ----</string>
    <string name="activity_dashboard_right_fragment_default_message">Reports will appear here after you take your first survey!</string>
    <string name="activity_dashboard_right_fragment_divider_message">----- All Responses -----</string>
    <string name="facebook_app_id">1841804132826804</string>
    <string name="fb_login_protocol_scheme">fb1841804132826804</string>
    <string name="activity_survey_start">Start</string>
    <string name="activity_survey_start_mainMessage">Welcome to your fatigue survey</string>
    <string name="activity_survey_start_subMessage">To begin, press Start</string>
    <string name="activity_survey_next">Next</string>
    <string name="activity_survey_submit">Submit</string>
    <string name="activity_survey_prompt">Please choose one</string>
    <string name="activity_survey_middle1_question">How are your energy levels?</string>
    <string name="activity_survey_middle2_question">Where are you at the moment?</string>
    <string name="activity_survey_middle2_at_home">At home</string>
    <string name="activity_survey_middle2_somewhere_else">Somewhere else</string>
    <string name="activity_survey_middle3_question">What have you been doing the last 10 minutes?</string>
    <string name="activity_survey_middle4_question">What are you doing right now?</string>
    <string name="activity_survey_middle5_question">How much effort did this activity take?</string>
    <string name="activity_survey_middle6_question">How fatigued are you at the moment?</string>
    <string name="activity_survey_middle7_question">How much did you enjoy this activity?</string>
    <string name="activity_survey_middle8_question">How does this activity affect your energy levels?</string>
    <string name="activity_survey_middle9_question">How would you describe your fatigue?</string>
    <string name="activity_survey_middle3_button1">Looking after myself</string>
    <string name="activity_survey_middle3_button2">Household or family tasks</string>
    <string name="activity_survey_middle3_button3">Working or studying</string>
    <string name="activity_survey_middle3_button4">Social activities</string>
    <string name="activity_survey_middle3_button5">Using a computer/phone/tablet</string>
    <string name="activity_survey_middle3_button6">Exercising</string>
    <string name="activity_survey_middle3_button7">Hobby or quiet past time</string>
    <string name="activity_survey_middle3a_button1">Getting washed or dressed</string>
    <string name="activity_survey_middle3a_button2">Eating</string>
    <string name="activity_survey_middle3a_button3">Sleeping</string>
    <string name="activity_survey_middle3a_button4">Taking time out to rest</string>
    <string name="activity_survey_middle3a_button5">Unwell in bed</string>
    <string name="activity_survey_middle3b_button1">Cooking</string>
    <string name="activity_survey_middle3b_button2">Cleaning house or car</string>
    <string name="activity_survey_middle3b_button3">Gardening</string>
    <string name="activity_survey_middle3b_button4">Caring for a child or children</string>
    <string name="activity_survey_middle3b_button5">Caring for another adult</string>
    <string name="activity_survey_middle3b_button6">Financial or administrative tasks</string>
    <string name="activity_survey_middle3b_button7">Laundry</string>
    <string name="activity_survey_middle3b_button8">House repairs</string>
    <string name="activity_survey_middle3c_button1">Working from home</string>
    <string name="activity_survey_middle3c_button2">Studying at home</string>
    <string name="activity_survey_middle3d_button1">Socialising at home</string>
    <string name="activity_survey_middle3d_button2">Talking on the telephone</string>
    <string name="activity_survey_middle3d_button3">Playing games</string>
    <string name="activity_survey_middle3e_button1">Playing a game</string>
    <string name="activity_survey_middle3e_button2">Watching videos</string>
    <string name="activity_survey_middle3e_button3">Checking emails</string>
    <string name="activity_survey_middle3e_button4">Browsing the internet</string>
    <string name="activity_survey_middle3e_button5">Reading</string>
    <string name="activity_survey_middle3e_button6">Listening to music/radio</string>
    <string name="activity_survey_middle3f_button1">Exercises (for example physiotherapy exercises, light weights,
        aerobics)
    </string>
    <string name="activity_survey_middle3f_button2">Yoga, pilates or stretching</string>
    <string name="activity_survey_middle3f_button3">Using an exercise machine</string>
    <string name="activity_survey_middle3g_button1">Watching television</string>
    <string name="activity_survey_middle3g_button2">Reading</string>
    <string name="activity_survey_middle3g_button3">Listening to music/radio</string>
    <string name="activity_survey_middle3g_button4">Playing a musical instrument</string>
    <string name="activity_survey_middle3g_button5">Art or craft work</string>
    <string name="activity_survey_middle4_button1">Looking after myself</string>
    <string name="activity_survey_middle4_button2">Household or family tasks</string>
    <string name="activity_survey_middle4_button3">Working or studying</string>
    <string name="activity_survey_middle4_button4">Travelling</string>
    <string name="activity_survey_middle4_button5">Social activities</string>
    <string name="activity_survey_middle4_button6">Using a computer/phone/tablet</string>
    <string name="activity_survey_middle4_button7">Sports or exercise</string>
    <string name="activity_survey_middle4_button8">Hobby or quiet past time</string>
    <string name="activity_survey_middle4a_button1">Eating</string>
    <string name="activity_survey_middle4a_button2">Sleeping</string>
    <string name="activity_survey_middle4a_button3">Taking time out to rest</string>
    <string name="activity_survey_middle4b_button1">Caring for a child or children</string>
    <string name="activity_survey_middle4b_button2">Caring for another adult</string>
    <string name="activity_survey_middle4b_button3">Financial or administrative tasks</string>
    <string name="activity_survey_middle4b_button4">Shopping</string>
    <string name="activity_survey_middle4c_button1">Working at your workplace</string>
    <string name="activity_survey_middle4c_button2">In a lesson</string>
    <string name="activity_survey_middle4c_button3">Studying</string>
    <string name="activity_survey_middle4d_button1">Driving</string>
    <string name="activity_survey_middle4d_button2">Passenger in a car</string>
    <string name="activity_survey_middle4d_button3">Using public transport</string>
    <string name="activity_survey_middle4d_button4">Cycling</string>
    <string name="activity_survey_middle4d_button5">Walking</string>
    <string name="activity_survey_middle4e_button1">Talking on the telephone</string>
    <string name="activity_survey_middle4e_button2">Visiting friends or family</string>
    <string name="activity_survey_middle4e_button3">Out with others for a meal or drinks</string>
    <string name="activity_survey_middle4e_button4">At the cinema or theatre</string>
    <string name="activity_survey_middle4e_button5">Watching live sport or music</string>
    <string name="activity_survey_middle4f_button1">Playing a game</string>
    <string name="activity_survey_middle4f_button2">Watching videos</string>
    <string name="activity_survey_middle4f_button3">Checking emails</string>
    <string name="activity_survey_middle4f_button4">Browsing the internet</string>
    <string name="activity_survey_middle4f_button5">Reading</string>
    <string name="activity_survey_middle4f_button6">Listening to music/radio</string>
    <string name="activity_survey_middle4g_button1">Walking</string>
    <string name="activity_survey_middle4g_button2">Jogging/running</string>
    <string name="activity_survey_middle4g_button3">Cycling</string>
    <string name="reaction_time_test_prompt1">REACTION TIME!</string>
    <string name="reaction_time_test_prompt2">Tap on the screen when the box below changes colour.</string>
    <string name="reaction_time_test_button3">Start</string>
    <string name="reaction_time_test_prompt5">PRESS START TO BEGIN</string>
</resources>