<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools">

    <Button
            android:text="@string/activity_survey_middle3e_button6"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3e_button6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_button5"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/activity_survey_middle3e_button5"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3e_button5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_button4"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/activity_survey_middle3e_button4"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3e_button4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_button3"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/activity_survey_middle3e_button3"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3e_button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_button2"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/activity_survey_middle3e_button2"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3e_button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_button1"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/activity_survey_middle3e_button1"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3e_button1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_prompt"
    />
    <TextView
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_survey_prompt"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            android:id="@+id/activity_survey_middle3e_prompt"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3e_question"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent" android:minHeight="48dp" android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="351dp"
            android:layout_height="76dp"
            android:text="@string/activity_survey_middle3_question"
            android:textColor="@color/custom_navy_A"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/activity_survey_middle3e_question"
            app:fontFamily="@font/spartan" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>