<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SurveyMiddle3Activity">

    <TextView
            android:layout_width="360dp"
            android:layout_height="62dp"
            android:text="@string/activity_survey_middle3_question"
            android:textColor="@color/custom_navy_A"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/activity_survey_middle3_question"
            app:fontFamily="@font/spartan" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="84dp"/>
    <TextView
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_survey_prompt"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            android:id="@+id/activity_survey_middle2_prompt"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_question" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent" android:minHeight="48dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_back_arrow"
            android:id="@+id/activity_survey_middle3_back_button" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="14dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" android:minHeight="48dp" tools:ignore="SpeakableTextPresentCheck"
            tools:srcCompat="@drawable/ic_back_arrow"/>
    <Button
            android:text="@string/activity_survey_middle3_button1"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.289"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_question"
            app:layout_constraintBottom_toTopOf="@+id/activity_survey_middle3_button2"
    />
    <Button
            android:text="@string/activity_survey_middle3_button2"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.413"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_button1"
            app:layout_constraintBottom_toTopOf="@+id/activity_survey_middle3_button3"
    />
    <Button
            android:text="@string/activity_survey_middle3_button3"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_button2"
            app:layout_constraintBottom_toTopOf="@+id/activity_survey_middle3_button4"
    />
    <Button
            android:text="@string/activity_survey_middle3_button4"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.591"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_button3"
            app:layout_constraintBottom_toTopOf="@+id/activity_survey_middle3_button5"
    />
    <Button
            android:text="@string/activity_survey_middle3_button5"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.804"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_button4"
            app:layout_constraintBottom_toTopOf="@+id/activity_survey_middle3_button6"/>
    <Button
            android:text="@string/activity_survey_middle3_button6"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button6"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.875"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_button5"
            app:layout_constraintBottom_toTopOf="@+id/activity_survey_middle3_button7"/>
    <Button
            android:text="@string/activity_survey_middle3_button7"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/custom_navy_A"
            android:layout_width="355dp"
            android:layout_height="57dp" android:id="@+id/activity_survey_middle3_button7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.947"
            app:layout_constraintTop_toBottomOf="@+id/activity_survey_middle3_button6"/>
</androidx.constraintlayout.widget.ConstraintLayout>